# independentfunctionalsemantics

./: README.md  barkerproject.cabal
.stack-work/install/x86_64-osx/lts-5.0/7.10.3/flag-cache/: barkerproject-0.1.0.0  barkerproject-0.1.0.0-8aa4073730c676dbe210ea8bffd8d092
.stack-work/install/x86_64-osx/lts-5.0/7.10.3/pkgdb/: barkerproject-0.1.0.0-8aa4073730c676dbe210ea8bffd8d092.conf  package.cache
src/: Main.hs
